--- a/iw-form.css
+++ b/iw-form.css
@@ -22,6 +22,10 @@
     @apply border border-gray-200 dark:border-gray-700 shadow-sm rounded-xl mt-6;
 }
 
+.iwFormClearable {
+    @apply w-4 h-4 text-slate-500 right-2 top-3 absolute cursor-pointer;
+}
+
 .iwFormCheckbox {
     @apply align-middle w-4 h-4 text-primary-600 bg-gray-100 border-gray-300 rounded focus: ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600;
 }
@@ -44,6 +48,10 @@
 
 .iwFormInputLabel {
     @apply min-h-5 block mb-2 text-sm font-medium text-gray-700 dark:text-white;
+}
+
+.iwFormInputLabelRequired {
+    @apply text-rose-600;
 }
 
 .iwFormInputLabelInline {
