--- a/css/EditorTipTap.css
+++ b/css/EditorTipTap.css
@@ -4,13 +4,72 @@
 }
 
 .iw-form-editor-menus {
-    background-color: rgba(255, 255, 255, 0.8);
-    padding-bottom: 10px;
-    padding-left: 4px;
-    padding-right: 4px;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.9);
+    /* border-bottom: 2px solid #999999; */
+    border-radius: 10px 10px 0 0;
+    display: flex;
+    height: 40px;
+    justify-content: center;
+    margin: -20px -20px 20px -20px;
     position: sticky;
     top: 65px;
     z-index: 10;
+}
+
+.dark .iw-form-editor-menus {
+}
+
+.iw-form-editor-menus.sticky {
+    /* border-top: 2px solid transparent; */
+    box-shadow: 0px 3px 5px -3px rgba(51, 51, 51, 0.5);
+}
+
+.iw-form-editor-menus .divider {
+    border: none;
+    border-left: 2px solid rgba(51, 51, 51, 0.2);
+    margin: 2px 10px;
+}
+
+.iw-form-editor-menu {
+    align-items: center;
+    border-radius: 5px;
+    color: #333333;
+    display: flex;
+    height: 24px;
+    justify-content: center;
+    margin-left: 4px;
+    width: 24px;
+}
+
+.iw-form-editor-menu > input {
+    border: none;
+    margin-left: 4px;
+}
+
+.iw-form-editor-menu > input[type='color'] {
+    width: 40px;
+    height: 20px;
+}
+
+.iw-form-editor-menu > select {
+    width: 40px;
+    font-size: 14px;
+}
+
+.iw-form-editor-menu:hover,
+.iw-form-editor-menu.is-active {
+    @apply cursor-pointer bg-sky-100 dark:bg-sky-700 text-sky-600 dark:text-sky-50 border-sky-500 dark:border-sky-600;
+}
+
+.iw-form-editor-menu.is-active:hover,
+.iw-form-editor-menu.is-active {
+    @apply cursor-default pointer-events-none;
+}
+
+.iw-form-editor-menu.disabled {
+    color: rgba(51, 51, 51, 0.5);
+    pointer-events: none;
 }
 
 .iw-form-editor-content {
@@ -78,23 +137,4 @@
     float: left;
     height: 0;
     pointer-events: none;
-}
-
-/** button **/
-.iw-form-editor button,
-.iw-form-editor input,
-.iw-form-editor select {
-    font-size: inherit;
-    font-family: inherit;
-    color: #000;
-    margin: 0.1rem;
-    border: 1px solid black;
-    border-radius: 0.3rem;
-    padding: 0.1rem 0.4rem;
-    background: white;
-    accent-color: black;
-}
-
-.iw-form-editor .is-active {
-    @apply bg-sky-100 dark:bg-sky-700 text-sky-600 dark:text-sky-50 border-sky-500 dark:border-sky-600 cursor-default pointer-events-none;
 }
