--- a/css/EditorTipTap.css
+++ b/css/EditorTipTap.css
@@ -17,9 +17,6 @@
     z-index: 10;
 }
 
-.dark .iw-form-editor-menus {
-}
-
 .iw-form-editor-menus.sticky {
     /* border-top: 2px solid transparent; */
     box-shadow: 0px 3px 5px -3px rgba(51, 51, 51, 0.5);
@@ -27,8 +24,13 @@
 
 .iw-form-editor-menus .divider {
     border: none;
-    border-left: 2px solid rgba(51, 51, 51, 0.2);
+    border-right: 2px solid rgba(51, 51, 51, 0.5);
     margin: 2px 10px;
+    height: 15px;
+}
+
+.iw-form-editor-menus .toggleable {
+    @apply !pointer-events-auto cursor-pointer;
 }
 
 .iw-form-editor-menu {
@@ -58,12 +60,12 @@
 }
 
 .iw-form-editor-menu:hover,
-.iw-form-editor-menu.is-active {
+.iw-form-editor-menu.active {
     @apply cursor-pointer bg-sky-100 dark:bg-sky-700 text-sky-600 dark:text-sky-50 border-sky-500 dark:border-sky-600;
 }
 
-.iw-form-editor-menu.is-active:hover,
-.iw-form-editor-menu.is-active {
+.iw-form-editor-menu.active:hover,
+.iw-form-editor-menu.active {
     @apply cursor-default pointer-events-none;
 }
 
@@ -82,7 +84,15 @@
 
 .iw-form-editor .tiptap ul,
 .iw-form-editor .tiptap ol {
-    padding: 0 1rem;
+    padding-inline-start: 40px;
+}
+
+.iw-form-editor .tiptap li {
+    list-style-type: disc;
+}
+
+.iw-form-editor .tiptap ol {
+    list-style-type: decimal;
 }
 
 .iw-form-editor .tiptap h1,
@@ -137,4 +147,8 @@
     float: left;
     height: 0;
     pointer-events: none;
+}
+
+.ProseMirror:focus-visible {
+    outline: none;
 }
