--- a/css/IwForm.css
+++ b/css/IwForm.css
@@ -34,6 +34,10 @@
     @apply grid sm:grid-cols-2 md:grid-cols-3;
 }
 
+.iwFormInputContainer {
+    @apply relative md:mb-2;
+}
+
 .iwFormInputWrapper {
     @apply m-2;
 }
@@ -83,7 +87,7 @@
 }
 
 .iwFormInputHelperText {
-    @apply my-1 text-xs text-gray-500 dark:text-gray-300 h-4;
+    @apply ml-1 text-xs text-gray-500 dark:text-gray-300 h-4;
 }
 
 .iwFormInputErrorText {
