--- a/css/EditorTipTap.css
+++ b/css/EditorTipTap.css
@@ -1,6 +1,7 @@
 .iw-form-editor {
     position: relative;
-    padding-left: 6px;
+    border: 1px solid #c1c1c157;
+    border-radius: 10px;
 }
 
 .iw-form-editor-menus {
@@ -11,7 +12,7 @@
     display: flex;
     height: 40px;
     justify-content: center;
-    margin: -20px -20px 20px -20px;
+    /* margin: -20px -20px 20px -20px; */
     position: sticky;
     top: 65px;
     z-index: 10;
@@ -34,10 +35,8 @@
 }
 
 .iw-form-editor-menu {
-    align-items: center;
-    border-radius: 5px;
-    color: #333333;
     display: flex;
+    color: #333333;
     height: 24px;
     justify-content: center;
     margin-left: 4px;
@@ -59,8 +58,13 @@
     font-size: 14px;
 }
 
-.iw-form-editor-menu:hover,
-.iw-form-editor-menu.active {
+.iw-form-editor-menu-btn {
+    align-items: center;
+    border-radius: 5px;
+}
+
+.iw-form-editor-menu-btn:hover,
+.iw-form-editor-menu-btn.active {
     @apply cursor-pointer bg-sky-100 dark:bg-sky-700 text-sky-600 dark:text-sky-50 border-sky-500 dark:border-sky-600;
 }
 
@@ -75,7 +79,7 @@
 }
 
 .iw-form-editor-content {
-    padding: 15px 8px;
+    padding: 15px;
 }
 
 .iw-form-editor .tiptap > * + * {
