--- a/css/IwForm.css
+++ b/css/IwForm.css
@@ -133,6 +133,22 @@
     @apply relative;
 }
 
+.iwformuploadlabel {
+    @apply flex flex-col items-center justify-center w-full h-64 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-gray-50 dark:hover:bg-bray-800 dark:bg-gray-700 hover:bg-gray-100 dark:border-gray-600 dark:hover:border-gray-500 dark:hover:bg-gray-600;
+}
+
+.iwFormUploadIcon {
+    @apply w-8 h-8 mb-4 text-gray-500 dark:text-gray-400;
+}
+
+.iwFormUploadIconWrapper {
+    @apply flex flex-col items-center justify-center pt-5 pb-6;
+}
+
+.iwFormUploadLabelText {
+    @apply mb-2 text-sm text-gray-500 dark:text-gray-400;
+}
+
 .iwFormWrapper {
     @apply grid;
 }
