refactor: extract out CSS from ColorSelector component

--- a/css/EditorTipTap.css
+++ b/css/EditorTipTap.css
@@ -78,6 +78,35 @@
     pointer-events: none;
 }
 
+.iw-form-editor-menu-dropdown {
+    @apply absolute bg-slate-100/95 cursor-default mt-8 p-2 rounded-sm shadow translate-y-1/2 w-40
+}
+
+.iw-form-editor-menu-dropdown-colorlist {
+    @apply grid grid-cols-6 place-content-center gap-2
+}
+
+.iw-form-editor-menu-dropdown-colorlist > li {
+    border-radius: 0.35rem;
+    border-width: 1px;
+    cursor: pointer;
+    height: 1rem;
+    transition: border-radius 0.2s;
+    width: 1rem;
+}
+
+.iw-form-editor-menu-dropdown-colorlist > li:hover {
+    border-radius: 1rem;
+}
+
+.iw-form-editor-menu-dropdown-custom-color {
+    display: block;
+    height: 1.25rem;
+    margin: auto;
+    margin-top: 0.5rem;
+    width: 2rem;
+}
+
 .iw-form-editor-menu-highlight-indicator {
     /* experimental feature */
     /* background-image: linear-gradient(to bottom, RGBA(255, 255, 255, 0) 85%, attr(data-highlight-color) 85%, attr(data-highlight-color) 90%, RGBA(255, 255, 255, 0) 90%); */
