--- a/css/EditorTipTap.css
+++ b/css/EditorTipTap.css
@@ -33,9 +33,10 @@
     /* border-bottom: 2px solid #999999; */
     border-radius: 10px 10px 0 0;
     display: flex;
-    height: 40px;
+    flex-wrap: wrap;
     justify-content: center;
     /* margin: -20px -20px 20px -20px; */
+    padding: 0.5rem 0;
     position: sticky;
     top: 65px;
     z-index: 10;
